Thu Sep 26 18:33:16 2002  David Helder  <dhelder@umich.edu>

	* NEWS, TODO: Updates

Mon Sep 23 18:59:39 2002  David Helder  <dhelder@umich.edu>

	* examples/Makefile.am (noinst_PROGRAMS): Make examples 
	    noinst, not extra.
	* examples/*: Update include to handle this.
	
	* examples/echoclient.c (async_client_sin_iofunc): Return 
	    FALSE on EOF.  Otherwise we get an error.
	
	* src/gnet-private.c (gnet_private_iochannel_new): Added.
	   Creates iochannel from descriptor in usual way.  If
	   we're using GLib 2, then it turns off buffering and
	   encoding.

	* src/tcp.c (gnet_tcp_socket_get_iochannel): Use 
	    gnet_private_iochannel_new()
	* src/tcp.c (gnet_tcp_socket_new_async_direct): "
	* src/tcp.c (gnet_tcp_socket_new_async_direct): "
	* src/udp.c (gnet_udp_socket_get_iochannel): 
	* src/unix.c (gnet_unix_socket_get_iochannel): 

Mon Sep 23 15:31:52 2002  David Helder  <dhelder@umich.edu>

	* Makefile.am (EXTRA_DIST): Move more extra dist here.
	    depcomp is no longer needed evidently.

Mon Sep 23 14:43:21 2002  David Helder  <dhelder@umich.edu>

	* autogen.sh: Don't include macros dir if there isn't one.
	* aclocal.h: Remove this.  No longer required.

Sat Sep 21 21:11:41 2002  David Helder  <dhelder@umich.edu>

	* configure.ac: Fixes for autoconf 1.6.

	* acconfig.h.in: Removed this.  Not needed in newer autoconf.
	
	* autogen.sh: Include the macros directory in aclocal.
	    We do not distribute the macros directory.  This
	    is for developer convience.

	* examples/Makefile.am, src/Makefile.am/, Makefile.am: 
	    Move EXTRA_DIST to root makefile.  autoconf 1.6 doesn't
	    like EXTRA_DIST in subdirectories for some reason.

Thu Sep 12 16:13:37 2002  David Helder  <dhelder@umich.edu>

	* tests/Makefile.am (LDADD): Add glib_libs and gthread_libs

	* src/inetaddr.c (gnet_inetaddr_list_interfaces): Increment
	   pointer in header.  We were missing the first interface.
	   Check return value of ioctl for flags.