@@ -43,6 +43,10 @@ To force GNet to build against GLib 1.3/2.0, pass the --enable-glib2
 to configure.  GNet will attempt to build against GLib 1.2 by default
 and GLib 1.3/2.0 if 1.2 is not available.
 
+If gethostbyname() is thread-safe, pass the
+--enable-threadsafe-gethostbyname() to configure.  (If it is and you
+don't do this, it will still function correctly.)
+
 INSTALL is the standard autoconf INSTALL file.
 
 
